<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.APODFragment"
    android:background="@color/background">

    <View
        android:id="@+id/vHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/nasaColor"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNasa"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:tint="@color/white"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="@id/vHeader"
        app:layout_constraintEnd_toEndOf="@id/vHeader"
        app:layout_constraintTop_toTopOf="@id/vHeader" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/toggle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_gallery"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/vHeader"
        app:layout_constraintStart_toStartOf="@id/vHeader"
        app:layout_constraintTop_toTopOf="@id/vHeader" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/nasalization"
        android:text="@string/nasa_apod"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/vHeader"
        app:layout_constraintEnd_toEndOf="@id/vHeader"
        app:layout_constraintStart_toStartOf="@id/vHeader"
        app:layout_constraintTop_toTopOf="@id/vHeader" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/ViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vHeader"
        tools:ignore="UnusedAttribute" />

    <View
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vHeader"
        android:id="@+id/gradient"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/nasalization"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintStart_toStartOf="@id/ViewPager" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/nasalization"
        android:text="@string/lorem_ipsum_dolor_set_amet"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintStart_toStartOf="@id/ViewPager" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/nasalization"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ViewPager"
        app:layout_constraintStart_toStartOf="@id/ViewPager" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ViewPager"
        app:layout_constraintStart_toStartOf="@id/ViewPager"
        android:text="@string/_01_01_2021"
        android:textColor="@color/middle_grey"
        android:fontFamily="@font/nasalization"
        android:textSize="20sp"
        android:layout_marginStart="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ViewPager"
        app:layout_constraintEnd_toStartOf="@+id/slash"
        android:text="@string/_1"
        android:textColor="@color/middle_grey"
        android:fontFamily="@font/nasalization"
        android:textSize="25sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textColor="@color/middle_grey"
        android:fontFamily="@font/nasalization"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="@id/ViewPager"
        app:layout_constraintEnd_toStartOf="@id/total"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ViewPager"
        app:layout_constraintEnd_toEndOf="@id/ViewPager"
        android:text="@string/_10"
        android:textColor="@color/middle_grey"
        android:fontFamily="@font/nasalization"
        android:textSize="35sp" />

</androidx.constraintlayout.widget.ConstraintLayout>